[package]
name = "driver-did-sov"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.6.16"
# aries-vcx = { path = "/Users/ab006rh/Source/aries-vcx/aries_vcx" }
aries-vcx = { git = "https://github.com/hyperledger/aries-vcx", rev = "39b3451f07" }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
# did_resolver_sov = { path = "/Users/ab006rh/Source/aries-vcx/did_resolver_sov" }
did_resolver_sov = { git = "https://github.com/hyperledger/aries-vcx", rev = "39b3451f07" }
hyper = "0.14.26"
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.0", features = ["trace"] }
anyhow = "1.0.70"
thiserror = "1.0.40"

[dev-dependencies]
# aries-vcx = { path = "/Users/ab006rh/Source/aries-vcx/aries_vcx", features = ["test_utils"] }
aries-vcx = { git = "https://github.com/hyperledger/aries-vcx", rev = "39b3451f07" }
rstest = "0.17.0"
